# ow-actions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  mc.sh  zip-actions.sh
actions/: compilepoll.js  mapreduce.js
dockers/ctoelf-action/: Dockerfile  setup.sh
dockers/ctoelf-action-squash/: Dockerfile  setup.sh
dockers/skeleton/: Dockerfile
src/: CMakeLists.txt
src/clang/: CMakeLists.txt  c-to-elf.cc  c-to-elf.hh  cc1args.h  depfile.hh  wasm-rt-content.h
src/count-words/: count_words.cc  merge_counts.cc
src/driver/: CMakeLists.txt  base16.hh  bptree-get-driver.cc  bptree-get-n-driver.cc  c-to-elf-driver.cc  count-words-driver.cc  exception.hh  link-elfs-driver.cc  merge-counts-driver.cc  mmap.hh  s3.hh  wasm2c-driver.cc
src/lld/: CMakeLists.txt  link-elfs.cc  link-elfs.hh
src/util/: CMakeLists.txt  file_names.hh
src/wasm2c/: CMakeLists.txt  initcomposer.cc  memorystringstream.hh  wasm-to-c.cc  wasm-to-c.hh
